src/test/ui/match/match-range-fail-dominate.stderr
error: multiple patterns covering the same range
  --> $DIR/match-range-fail-dominate.rs:6:7
   |
LL |       1 ..= 10 => { }
   |       -------- this range overlaps on `5i32..=6i32`
LL |       5 ..= 6 => { }
   |       ^^^^^^^ overlapping patterns
   |
note: lint level defined here
  --> $DIR/match-range-fail-dominate.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: multiple patterns covering the same range
  --> $DIR/match-range-fail-dominate.rs:12:7
   |
LL |       3 ..= 6 => { }
   |       ------- this range overlaps on `4i32..=6i32`
LL |       4 ..= 6 => { }
   |       ^^^^^^^ overlapping patterns

error: multiple patterns covering the same range
  --> $DIR/match-range-fail-dominate.rs:18:7
   |
LL |       4 ..= 6 => { }
   |       ------- this range overlaps on `4i32..=6i32`
LL |       4 ..= 6 => { }
   |       ^^^^^^^ overlapping patterns

error: multiple patterns covering the same range
  --> $DIR/match-range-fail-dominate.rs:24:7
   |
LL |       'A' ..= 'z' => {}
   |       ----------- this range overlaps on `'a'..='z'`
LL |       'a' ..= 'z' => {}
   |       ^^^^^^^^^^^ overlapping patterns

warning: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:29:7
   |
LL |       0.01f64 ..= 6.5f64 => {}
   |       ^^^^^^^
   |
   = note: `#[warn(illegal_floating_point_literal_pattern)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

warning: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:29:19
   |
LL |       0.01f64 ..= 6.5f64 => {}
   |                   ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

warning: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:36:7
   |
LL |       0.02f64 => {}
   |       ^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: unreachable pattern
  --> $DIR/match-range-fail-dominate.rs:36:7
   |
LL |       0.02f64 => {}
   |       ^^^^^^^

warning: floating-point types cannot be used in patterns
  --> $DIR/match-range-fail-dominate.rs:29:7
   |
LL |       0.01f64 ..= 6.5f64 => {}
   |       ^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error: aborting due to 5 previous errors

